# ASSISTANT_AI

./: .env.example  .gitignore  ASSISTANT_PLAN_V2.md  CLAUDE.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  start.bat
config/: heartbeat.json  holidays.json
docs/: PASO_A_PASO.md  TELEGRAM_SETUP.md  WHATSAPP_BAILEYS_SETUP.md  WHATSAPP_BUSINESS_SETUP.md
launchd/: com.personal-ai-assistant.plist
scripts/: alarm_manager.py  alarm_trigger.py  daily_briefing.py  daily_holidays.py  daily_tech_news.py  daily_weather.py  reminder_watch_20260323.py
src/: main.py
src/apps/: __init__.py
src/apps/alarm/: __init__.py  alarm_app.py  alarms.json  themes.json
src/apps/contacts/: __init__.py  __main__.py  database.py  models.py  server.py
src/apps/contacts/static/: app.js  index.html  style.css
src/apps/expenses/: __init__.py
src/audio/: __init__.py  processor.py  synthesizer.py  transcriber.py
src/channels/: __init__.py  base.py  telegram.py  whatsapp_baileys.py  whatsapp_business.py
src/core/: claude_bridge.py  desktop_control.py  executor.py  gateway.py  heartbeat.py  heartbeat_checks.py  hot_reload.py  llm_bridge.py  notification_manager.py  security.py
src/learning/: knowledge_base.py  learner.py  web_search.py
src/memory/: __init__.py  claude_code_sync.py  context.py  conversation.py  engine.py  learning.py  relationships.py  tasks.py
src/onboarding/: wizard.py
src/pet/: __init__.py  behavior.py  bridge.py  overlay.py  sprite_engine.py
src/pet/assets/: generate_sprites.py
src/skills/: base_skill.py  catalog.py  registry.py
src/skills/built_in/: __init__.py  alarm_skill.py  automation_skill.py  catalog_skill.py  claude_code.py  clipboard_skill.py  contacts_skill.py  daily_briefing_skill.py  data_converter_skill.py  desktop_control.py  expense_skill.py  file_search.py  files.py  git_skill.py  gmail_skill.py  heartbeat_skill.py  learn_skill.py  mcp_creator.py  meeting_skill.py  memory_skill.py  network_skill.py  notes_skill.py  package_skill.py  pdf_builder_skill.py  seo_skill.py  skill_creator.py  social_media_skill.py  system_monitor.py  tasks_skill.py  terminal.py
src/utils/: approval.py  crypto.py  formatter.py  gmail_auth.py  logger.py  platform.py
systemd/: ai-assistant.service  xplus-contacts.service
whatsapp-bridge/: .gitignore  README.md  index.js  package.json
